# epm

./: .gitignore  .travis.yml  README.md  appveyor.yml  debug.yml  docker.yml  mkdocker.sh  mkdocs.yml  setup.py
ci/: README.md
ci/ansible/: HOSTS  server.yml
docker/: build  build.cmd  build.sh  config.yml  main.py  publish.sh
docker-tools/: build.sh  main.py
docker-tools/templates/: GCC.j2  HiSi.j2  install.j2
docker/templates/: GCC-ARM.j2  GCC.j2  GO.j2  base-mingw.j2  base.j2  copy.j2  install-cross.j2  install.j2  label.j2  linaro.j2  mingw.j2  wine.j2
docker/templates/conan/: himix100.j2  himix200.j2  hisiv300.j2  hisiv400.j2
docs/: TWP.md  ci.md  conan-repo.md  epm_env.md  extension.md  gdb-build.md  getting-start.md  gitlab-flow.md  index.md  index_zh.md  install.md  installation.md  known-issues.md  main.py  meta-info-manifest.md  package-meta-information.md  program.md  project.md  sandbox.md
docs/ci/: config.toml
docs/ci/169/: config.toml
docs/ci/examples/: cleanup.sh  config.sh  config.toml  prepare.sh  run.sh
docs/images/: epm.drawio
docs/master/: develop.md
docs/reference/: env_vars.md
epm/: __init__.py  api.py  command.py  enums.py  errors.py  main.py  requirements.txt  requirements_core.txt  requirements_extend.txt
epm/commands/: __init__.py  api.py  build.py  create.py  download.py  exec.py  init.py  project.py  runit.py  runx.py  sandbox.py  test.py  upload.py  venv.py  wenv.py  workbench.py
epm/data/: docker.sh  log-conf.yml
epm/data/conan/: settings.yml
epm/data/default_profiles/: linux.yml  windows.yml
epm/data/docker/: build.cmd.j2  build.sh.j2  build_command.sh.j2
epm/data/extension/: extension.md  extension.yml
epm/data/profiles/: gcc.yml  gcc5-x86  hisi.yml  ios.yml  mac.yml  manifest.yml  mingw.yml  msvc.yml  vs2019-x86.d  vs2019.d  vs2019mt.d  (+1 more)
epm/extensions/mkprj/templates/: CMakeLists.txt  LICENSE  conanfile.py  package.yml
epm/extensions/mkprj/templates/cmake/: options.cmake  {{argument.name}}-config.cmake.in  {{name}}-config.cmake.in
epm/extensions/mkprj/templates/include/{{argument.name}}/: declare.h  {{argument.name}}.h
epm/extensions/mkprj/templates/source/: {{argument.name}}.c
epm/extensions/mkprj/templates/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
epm/model/: __init__.py  config.py  plan.py  profile.py  program.py  project.py  runner.py  sandbox.py  scheme.py
epm/paths/: __init__.py
epm/test/: README.md  __init__.py  helpers.py  main.py  test-conf.yml  test_build.py  test_profile.py  test_utils.py  utils.py
epm/tool/: __init__.py  ci.py  conan.py  docker.py  project.py  sandbox.py  shell.py  smb.py  ssh.py  venv.py  wenv.py
epm/tools/: __init__.py  conan.py  decorater.py  extension.py  files.py  lockfile.py  project.py  sandbox.py  ssh.py
epm/util/: __init__.py  expression.py  files.py  mirror.py  workbench.py
epm/utils/: __init__.py  cache.py  docker.py  logger.py  mirror.py  process.py  sandbox.py  shell.py  workbench.py
epm/worker/: __init__.py  build.py  create.py  download.py  runit.py  runx.py  sandbox.py  upload.py  venv.py
tools/: README.md  docker.yml  gitlab-runner.py  mingw-sync.py  mkdocker.py  msys2-sync.py
tools/Dockerfile/: conan-gcc5-x86.j2  conan-gcc8-x86.j2  conan-hisiv300.j2  gcc5-x86.j2  gcc5.j2  hisiv300.j2  make.py  make.sh
tools/ansible/: HOSTS  epm_docker.yml  nexus.yml
tools/docker/: conan-gcc5-x86.j2  conan-gcc8-x86.j2  conan-hisiv300.j2  copy.j2  gcc48-armv7-hisiv300.j2  gcc5-x86.j2  gcc5.j2  hisiv300.j2  mkdocs.j2  post.j2  pre.j2
(+199 files in other folders)
